[package]
name = "lc-boilerplate-generator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.9"
html2text = "0.12.0"
surf = "2.3.2"
surf-cookie-middleware = "0.3.0"